Fixed alignment for catacol stuff

--- a/catacol.css
+++ b/catacol.css
@@ -17,31 +17,20 @@ body {
 
 }
 
-
-
 .header-box {
   width: 40%;
   height: auto;
   top: 1rem;
-  z-index: 2;
+  z-index: 999;
 
   float: right;
-  display: inline-block;
-  position: fixed;
+  /* display: inline-block; */
+  /* position: fixed; */
   
   
 }
 
-
-.box {
-  ;
-}
-
-.doorstop {
-  ;
-}
 nav ul {
-  margin: ;
   padding: 1px 1px ;
   text-align: center;
   max-width: 20%;
@@ -80,19 +69,13 @@ nav li a:hover {
 }
 
 header h1 {
-
-  font-size: 4rem;
-  width: 20%;
-  height: 100%;
-  float: right;
-  color: #ffffff;
+  width: 41%;
+  height: 67%;
   padding: 0rem 0rem 0.5rem 0rem; 
   margin: 1rem 0rem 0rem 0rem;
   position: fixed;
-  text-align: ;
   display: inline-block;
   top: 1rem ;
-  (255, 255, 255, 0.5);
   color: #000000;
   font-size: 10rem;
   transform: rotate(90deg);
